# latch

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/client/: mod.rs
src/commands/: attach.rs  detach.rs  history.rs  kill.rs  list.rs  mod.rs  new.rs  rename.rs
src/server/: mod.rs  protocol.rs
src/session/: mod.rs  ring_buffer.rs
src/tui/: events.rs  mod.rs  state.rs  ui.rs
tests/: cli_smoke.rs  m0_foundation.rs  m1_integration.rs  m2_tui.rs
