[package]
name = "latch"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Transparent terminal session manager -- attach, detach, persist"
license = "MIT"
repository = "https://github.com/donmusic/latch"
readme = "README.md"

[lib]
name = "latch"
path = "src/lib.rs"

[[bin]]
name = "latch"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
directories = "5"
anyhow = "1"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serial_test = "1"
